Proof of concept using s3 bucket pre signed url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,9 @@ services:
       - SMTP_MAIL_FROM=${SMTP_MAIL_FROM}
       - UWSGI_PROCESSES=${UWSGI_PROCESSES}
       - UWSGI_THREADS=${UWSGI_THREADS}
+      - GALAXY_HOST=${GALAXY_HOST}
+      - GALAXY_API_KEY=${GALAXY_API_KEY}
+      - GALAXY_TEST_FILE=${GALAXY_TEST_FILE}
     volumes:
       - .:/app
       - ckandata28:/data
