Fix missing BIOPLATFORMS_HELPDESK_ADDRESS for dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,7 @@ services:
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - SMTP_MAIL_FROM=${SMTP_MAIL_FROM}
+      - BIOPLATFORMS_HELPDESK_ADDRESS=${BIOPLATFORMS_HELPDESK_ADDRESS}
       - UWSGI_PROCESSES=${UWSGI_PROCESSES}
       - UWSGI_THREADS=${UWSGI_THREADS}
       - SUMMARY_TABLE_DATA_PATH=${SUMMARY_TABLE_DATA_PATH}
