updated for s3_window changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
       - AWS_STORAGE_PATH=${AWS_STORAGE_PATH}
+      - AWS_LIMITED_S3_ACCESS_KEY_ID=${AWS_LIMITED_S3_ACCESS_KEY_ID}
+      - AWS_LIMITED_S3_SECRET_ACCESS_KEY=${AWS_LIMITED_S3_SECRET_ACCESS_KEY}
+      - AWS_LIMITED_S3_EXPIRY_IN_SECONDS=${AWS_LIMITED_S3_EXPIRY_IN_SECONDS}
       - MAILGUN_API_KEY=${MAILGUN_API_KEY}
       - MAILGUN_API_DOMAIN=${MAILGUN_API_DOMAIN}
       - MAILGUN_SENDER_EMAIL=${MAILGUN_SENDER_EMAIL}
