Set SUMMARY_TABLE_DATA_PATH to point to test data if unset

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
       - BIOPLATFORMS_HELPDESK_ADDRESS=${BIOPLATFORMS_HELPDESK_ADDRESS}
       - UWSGI_PROCESSES=${UWSGI_PROCESSES}
       - UWSGI_THREADS=${UWSGI_THREADS}
-      - SUMMARY_TABLE_DATA_PATH=${SUMMARY_TABLE_DATA_PATH}
+      - SUMMARY_TABLE_DATA_PATH=${SUMMARY_TABLE_DATA_PATH:-/app/ckanext-bpatheme/ckanext/bpatheme/tests/summary/summary_table_data_path.json}
       - COMMS_TITLE=${COMMS_TITLE}
       - COMMS_MESSAGE=${COMMS_MESSAGE}
       - COMMS_LINK_PRE=${COMMS_LINK_PRE}
