--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       - WAIT_FOR_SOLR=1
       - WAIT_FOR_CACHE=1
       - SESSION_SECRET=${SESSION_SECRET}
+      - APITOKEN_SECRET=${APITOKEN_SECRET}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_HOST_NAME_TO_S3=${AWS_HOST_NAME_TO_S3}
       - AWS_REGION_NAME=${AWS_REGION_NAME}
