Add config switch to disable ckanext-s3filestore access check on startup
See: https://trello.com/c/JzRvnvQA/1324-update-dockercompose-bpa-ckan-for-ckan-29

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,7 @@ services:
       - LOCAL_CKAN_API_URL=${LOCAL_CKAN_API_URL}
       - CKAN_API_KEY=${CKAN_API_KEY}
       - LOCAL_DEV=yes
+      - S3FILESTORE_CHECK_ACCESS_ON_STARTUP=false
       - SMTP_SERVER=${SMTP_SERVER}
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
