--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "ckan"]
 	path = ckan
-	url = ssh://github.com/BioplatformsAustralia/ckan.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckan.git
 [submodule "ckanext-bpatheme"]
 	path = ckanext-bpatheme
-	url = ssh://github.com/BioplatformsAustralia/ckanext-bpatheme.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-bpatheme.git
 [submodule "ckanext-bpaschema"]
 	path = ckanext-bpaschema
-	url = ssh://github.com/BioplatformsAustralia/ckanext-bpaschema.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-bpaschema.git
 [submodule "ckanext-bulk"]
 	path = ckanext-bulk
-	url = ssh://github.com/BioplatformsAustralia/ckanext-bulk.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-bulk.git
 [submodule "ckanext-s3filestore"]
 	path = ckanext-s3filestore
-	url = ssh://github.com/BioplatformsAustralia/ckanext-s3filestore.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-s3filestore.git
 [submodule "ckanext-scheming"]
 	path = ckanext-scheming
-	url = ssh://github.com/BioplatformsAustralia/ckanext-scheming.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-scheming.git
 [submodule "ckanext-spatial"]
 	path = ckanext-spatial
-	url = https://github.com/BioplatformsAustralia/ckanext-spatial.git
+	url = https://git@github.com/BioplatformsAustralia/ckanext-spatial.git
 [submodule "docker-bpa-ckan"]
 	path = docker-bpa-ckan
-	url = ssh://github.com/BioplatformsAustralia/docker-bpa-ckan
+	url = ssh://git@github.com/BioplatformsAustralia/docker-bpa-ckan
 [submodule "ckanext-initiatives"]
 	path = ckanext-initiatives
-	url = ssh://github.com/BioplatformsAustralia/ckanext-initiatives.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-initiatives.git
 [submodule "ckanext-ytp-request"]
 	path = ckanext-ytp-request
-	url = ssh://github.com/BioplatformsAustralia/ckanext-ytp-request.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-ytp-request.git
