--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       - COMMS_LINK_HREF=${COMMS_LINK_HREF}
       - COMMS_OWNER=${COMMS_OWNER}
       - CKANEXT_SAML2_IDP_METADATA_LOCATION=${CKANEXT_SAML2_IDP_METADATA_LOCATION}
-      - CKANEXT_SAML2_IDP_METADATA_LOCAL_PATH=${CKANEXT_SAML@_IDP_METADATA_LOCAL_PATH}
+      - CKANEXT_SAML2_IDP_METADATA_LOCAL_PATH=${CKANEXT_SAML2_IDP_METADATA_LOCAL_PATH}
       - CKANEXT_SAML2_USER_FIRSTNAME=${CKANEXT_SAML2_USER_FIRSTNAME}
       - CKANEXT_SAML2_USER_LASTNAME=${CKANEXT_SAML2_USER_LASTNAME}
       - CKANEXT_SAML2_USER_EMAIL=${CKANEXT_SAML2_USER_EMAIL}
