Update missing variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,8 @@ services:
       - CKANEXT_SAML2AUTH_ATTRIBUTE_MAP_DIR=${CKANEXT_SAML2AUTH_ATTRIBUTE_MAP_DIR}
       - CKANEXT_SAML2AUTH_REQUIRED_ATTRIBUTES=${CKANEXT_SAML2AUTH_REQUIRED_ATTRIBUTES}
       - CKANEXT_SAML2AUTH_WANT_ASSERTIONS_SIGNED=${CKANEXT_SAML2AUTH_WANT_ASSERTIONS_SIGNED}
+      - CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION=${CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION}
+      - CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION_PATH=${CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION_PATH}
     volumes:
       - .:/app
       - ckandata28:/data
