Add variables for bpatogalaxy extension

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,9 @@ services:
       - CKANEXT_SAML2AUTH_WANT_ASSERTIONS_SIGNED=${CKANEXT_SAML2AUTH_WANT_ASSERTIONS_SIGNED}
       - CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION=${CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION}
       - CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION_PATH=${CKANEXT_SAML2AUTH_IDP_METADATA_LOCATION_PATH}
+      - CKANEXT_BPATOGALAXY_GALAXY_HOST=${CKANEXT_BPATOGALAXY_GALAXY_HOST}
+      - CKANEXT_BPATOGALAXY_GALAXY_API_KEY=${CKANEXT_BPATOGALAXY_GALAXY_API_KEY}
+      - CKANEXT_BPATOGALAXY_GALAXY_DRS_PROXY=${CKANEXT_BPATOGALAXY_GALAXY_DRS_PROXY}
     volumes:
       - .:/app
       - ckandata28:/data
