Change from pickle to cookie - CKAN 2.9.9 upgrade
See: https://trello.com/c/YAckXo7Y/1586-change-from-pickle-to-cookie-ckan-299-upgrade
See: https://docs.ckan.org/en/2.9/changelog.html#migration-note

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - WAIT_FOR_CACHE=1
       - SESSION_SECRET=${SESSION_SECRET}
       - APITOKEN_SECRET=${APITOKEN_SECRET}
+      - BEAKER_ENCRYPT_KEY=${BEAKER_ENCRYPT_KEY}
+      - BEAKER_VALIDATE_KEY=${BEAKER_VALIDATE_KEY}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_HOST_NAME_TO_S3=${AWS_HOST_NAME_TO_S3}
       - AWS_REGION_NAME=${AWS_REGION_NAME}
