Add ckanext-drs to BPA CKAN deployment
See: https://trello.com/c/pqoEZSSQ/2018-deploy-ckanext-drs-to-bpa-ckan-environment

--- a/.gitmodules
+++ b/.gitmodules
@@ -39,3 +39,6 @@
 	path = ckanext-laissezpasser
 	url = ssh://git@github.com/BioplatformsAustralia/ckanext-laissezpasser.git
 	branch = main
+[submodule "ckanext-drs"]
+	path = ckanext-drs
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-drs.git
