update submodule for oidc-pkce

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,4 +44,4 @@
 	url = ssh://git@github.com/BioplatformsAustralia/ckanext-drs.git
 [submodule "ckanext-oidc-pkce"]
 	path = ckanext-oidc-pkce
-	url = git@github.com:DataShades/ckanext-oidc-pkce.git
+	url = ssh://git@github.com/BioplatformsAustralia/ckanext-oidc-pkce.git
