--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - 5432
     volumes:
       - pgdatastore28:/var/lib/postgresql/data
+      - ./postgis/init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
     environment:
       - POSTGRES_USER=datastore
       - POSTGRES_PASSWORD=datastore
@@ -58,7 +59,7 @@ services:
     environment:
       - DBUSER=ckan
       - DATASTORE_DBUSER=datastore
-      - DATASTORE_DB_READONLY_USER=datastore
+      - DATASTORE_DB_READONLY_USER=readonly
       - WAIT_FOR_DB=1
       - WAIT_FOR_DATASTORE=1
       - WAIT_FOR_SOLR=1
