add initial changes for BPA

--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 [submodule "ckanext-drs"]
 	path = ckanext-drs
 	url = ssh://git@github.com/BioplatformsAustralia/ckanext-drs.git
+[submodule "ckanext-oidc-pkce-bpa"]
+	path = ckanext-oidc-pkce-bpa
+	url = ssh://git@github.com:BioplatformsAustralia/ckanext-oidc-pkce-bpa.git
