add more oidc related configs in the docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,14 @@ services:
       - COMMS_LINK_TEXT=${COMMS_LINK_TEXT}
       - COMMS_LINK_HREF=${COMMS_LINK_HREF}
       - COMMS_OWNER=${COMMS_OWNER}
+      - CKANEXT_OIDC_PKCE_BASE_URL=${CKANEXT_OIDC_PKCE_BASE_URL}
+      - CKANEXT_OIDC_PKCE_CLIENT_ID=${CKANEXT_OIDC_PKCE_CLIENT_ID}
+      - CKANEXT_OIDC_PKCE_CLIENT_SECRET=${CKANEXT_OIDC_PKCE_CLIENT_SECRET}
+      - CKANEXT_OIDC_PKCE_BPA_AUTH0_DOMAIN=${CKANEXT_OIDC_PKCE_BPA_AUTH0_DOMAIN}
+      - CKANEXT_OIDC_PKCE_BPA_API_AUDIENCE=${CKANEXT_OIDC_PKCE_BPA_API_AUDIENCE}
+      - CKANEXT_OIDC_PKCE_BPA_USERNAME_CLAIM=${CKANEXT_OIDC_PKCE_BPA_USERNAME_CLAIM}
+      - CKANEXT_OIDC_PKCE_BPA_APP_METADATA_CLAIM=${CKANEXT_OIDC_PKCE_BPA_APP_METADATA_CLAIM}
+      - CKANEXT_OIDC_PKCE_BPA_REGISTER_REDIRECT_URL=${CKANEXT_OIDC_PKCE_BPA_REGISTER_REDIRECT_URL}
     volumes:
       - .:/app
       - ckandata28:/data
