add OIDC related configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,9 +113,12 @@ services:
       - CKANEXT_OIDC_PKCE_BPA_AUTH0_DOMAIN=${CKANEXT_OIDC_PKCE_BPA_AUTH0_DOMAIN}
       - CKANEXT_OIDC_PKCE_BPA_API_AUDIENCE=${CKANEXT_OIDC_PKCE_BPA_API_AUDIENCE}
       - CKANEXT_OIDC_PKCE_BPA_USERNAME_CLAIM=${CKANEXT_OIDC_PKCE_BPA_USERNAME_CLAIM}
+      - CKANEXT_OIDC_PKCE_BPA_LOGIN_REDIRECT_URL=${CKANEXT_OIDC_PKCE_BPA_LOGIN_REDIRECT_URL}
+      - CKANEXT_OIDC_PKCE_BPA_PROFILE_REDIRECT_URL=${CKANEXT_OIDC_PKCE_BPA_PROFILE_REDIRECT_URL}
       - CKANEXT_OIDC_PKCE_BPA_REGISTER_REDIRECT_URL=${CKANEXT_OIDC_PKCE_BPA_REGISTER_REDIRECT_URL}
       - CKANEXT_OIDC_PKCE_BPA_ROLES_CLAIM=${CKANEXT_OIDC_PKCE_BPA_ROLES_CLAIM}
       - CKANEXT_OIDC_PKCE_BPA_ROLE_ORG_MAPPING=${CKANEXT_OIDC_PKCE_BPA_ROLE_ORG_MAPPING}
+      - CKANEXT_OIDC_PKCE_BPA_SUPPORT_EMAIL=${CKANEXT_OIDC_PKCE_BPA_SUPPORT_EMAIL}
 
     volumes:
       - .:/app
